--- a/client/src/components/bars/Footer/Footer.module.css
+++ b/client/src/components/bars/Footer/Footer.module.css
@@ -5,10 +5,11 @@
   justify-items: center;
   position: fixed;
   /* bottom => 0 */
-  bottom: -35%;
-  padding-bottom: 20%;
-  padding-top: 20%;
+  bottom: 0;
+  left: 0;
+  /* padding-bottom: 20%; */
   width: 100%;
+  height: var(--footerHeight);
   border-radius:100%;
-  animation: blur-in 0.2s linear both} @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}
-}
+  animation: blur-in 0.2s linear both;
+} @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
