--- a/client/src/components/views/Shop/FilterBarShop.module.css
+++ b/client/src/components/views/Shop/FilterBarShop.module.css
@@ -1,4 +1,4 @@
-.sidebar {
+.component {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -7,13 +7,91 @@
   transition: transform 0.3s, filter 0.3s,width 0.2s;
 }
 
-.sidebar > div {
+.component > div {
   height: 4rem;
 }
 
 .option {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.overlay {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 9998;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+  margin:15% 0 0 10%;
+  right: 0;
+  left: 0;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  background-color: white;
+  position:absolute;
+  height: 50%;
+  width: 80%;
+  border-radius: 10px;
+  }
+  .modal-light {
+     background-color: whitesmoke;
+     box-shadow: 5px 5px 1rem 2rem floralwhite inset;
+  }
+  .modal-dark {
+     background-color: #212121;
+     box-shadow: 5px 5px 1rem 1rem #34333350 inset;
+  }
+
+.modal select {
+  width: 50%;
+  height: 10%;
+  border: 1px solid;
+}
+
+/* -------- RESPONSIVE --------- */
+
+@media screen and (width > 700px) {
+  .responsive-component {
+     display: none;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .responsive-component{
+     top: var(--navFilterHeight);
+     display:flex;
+     align-items: center;
+     justify-content: center;
+     gap: 1rem;
+     width: 100%;
+     height: 4%;
+     padding: 1rem;
+     color: aliceblue;
+     box-sizing: border-box;
+     background-color: rgba(0, 0, 0, 0.672);
+     overflow: hidden;
+  }
+
+  .responsive-component button {
+     width: 40%;
+     height: 2.5rem;
+  }
+  .component {
+     display: none;
+  }
 }
