--- a/client/src/components/datos/PagoMercadoPago/PagoMercadoPago.module.css
+++ b/client/src/components/datos/PagoMercadoPago/PagoMercadoPago.module.css
@@ -1,18 +1,14 @@
 .component{
     width: 100%;
-    height: 40px;
-    margin-bottom: 20%;
 }
 
 
 .carga{
     display: flex;
+    justify-content: center;
     align-items: center;
     height: 48px;
     padding: 4%;
-     width: 100%;
-    ;
+    width: 265px;
     background-color: rgb(7, 119, 248);
-    border-radius: 6%;
-    
 }
