--- a/client/src/components/datos/PagoMetamask/PagoMetamask.module.css
+++ b/client/src/components/datos/PagoMetamask/PagoMetamask.module.css
@@ -8,7 +8,7 @@
     padding: 4%;
     width: 100%;
     background-color: rgb(248, 172, 7);
-    border-radius: 6%;
+    border-radius: 6px;
     
 }
 .container:hover{
