--- a/client/src/components/views/Cart/Cart.module.css
+++ b/client/src/components/views/Cart/Cart.module.css
@@ -2,14 +2,14 @@
     margin-top: var(--navBarHeight);
     width: 100%;
     /* padding-top: 4%; */
-    padding-bottom: 15%;
+    padding-bottom: var(--footerHeight);
     min-height: calc(100vh - var(--navBarHeight));
     background-color: rgb(94, 121, 148);
     color: aliceblue;
     animation:blur-in 1s linear both;
     position: absolute;
     display: flex;
-  flex-direction: column;
+    flex-direction: column;
     /* width: 100vw; */
     /* box-sizing: border-box; */
   }
@@ -64,8 +64,8 @@
   
   
   .total {
-      padding-left: 17%;
-      width: 65%;
+      padding-left:13%;
+      width: 100%;
       text-align: center;
   
   }
@@ -114,7 +114,8 @@
   
   .totalcontainer{
       display: flex;
-      width: 400px;
+      width: 500px;
+      align-items: center;
       justify-content: center;
       background-color: rgba(2, 11, 19, 0.26)
   
@@ -136,7 +137,7 @@
         text-align: center;
         font-size: 28px;
         padding: 20px;
-        height: 60px;
+        height: 30px;
         width: 300px;
         transition: all 0.5s;
         cursor: pointer;
@@ -158,12 +159,18 @@
       }
       
       .name{
-          margin-left: 10%;
+        display: flex;
+        justify-content: center;
+        justify-items: center;
+        text-align: center;
           font-size: 20px;
           margin-top: 0%;
-          width: 200px;}
-
+           align-items: center;}
     
           .h1{
-            margin-left: -50%;
+            margin-left: -10%;
+          }
+
+          .metamask{
+            height: 200px;
           }
