--- a/client/src/components/datos/Subscripciones/SubscripcionesFlotante.module.css
+++ b/client/src/components/datos/Subscripciones/SubscripcionesFlotante.module.css
@@ -68,8 +68,8 @@
     color: white !important;
 }
 .component-dark {
-    background-color: white;
-    color: black;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
 
