dark profile arreglado

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -3,7 +3,8 @@
 }
 
 .component-dark {
- background-color: #010003;
+ /* background-color: #010003; */
+ background-color: #111111;
  color: #FFFFFF;
  /* position: absolute;
  top:0;
