--- a/client/src/components/views/Profile/Profile.module.css
+++ b/client/src/components/views/Profile/Profile.module.css
@@ -1,12 +1,12 @@
 .profileContainer {
     margin-top: var(--navBarHeight);
     min-height: calc(100vh - var(--navBarHeight));
-    margin: 6%;
+    padding: 1%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 30px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -16,7 +16,6 @@
     justify-content: flex-start;
     align-items: center;
     gap: 5px;
-    width: 300;
     min-width: 250px;
     height: fit-content;
     background-color: whitesmoke;
@@ -25,7 +24,8 @@
     box-shadow: 1px 1px 5px rgba(128, 128, 128);
 }
 .infoProfile-dark {
-    background-color: rgb(43, 48, 49);
+    
+    background-color: rgb(51, 51, 51);
     box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
 }
 
@@ -49,7 +49,7 @@
     align-items: center;
     width: 70%;
     min-width: 300px;
-    gap: 33px;
+    gap: 30px;
 }
 
 .navBarProfile {
@@ -62,7 +62,8 @@
     box-shadow: 1px 1px 5px rgba(128, 128, 128);
 }
 .navBarProfile-dark {
-    background-color: rgb(43, 48, 49);
+    
+    background-color: rgb(51, 51, 51);
     box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
 }
 
@@ -79,7 +80,8 @@
     color: gray;
 }
 .emptyTab-dark {
-    background-color: rgb(43, 48, 49);
+    
+    background-color: rgb(51, 51, 51);
     box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
 }
 .emptyTab img {
@@ -205,7 +207,8 @@
     overflow-y: scroll;
 }
 .favorites-dark {
-    background-color: rgb(43, 48, 49);
+    
+    background-color: rgb(51, 51, 51);
     box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
 }
 
@@ -262,7 +265,8 @@
     gap: 10px;
 }
 .reviews-dark {
-    background-color: rgb(43, 48, 49);
+    
+    background-color: rgb(51, 51, 51);
     box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
 }
 
@@ -340,10 +344,9 @@
     box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
     height: 400px;
     overflow-y: scroll;
-    gap: 10px;
-    padding: 3px;
 }
 .cart-dark {
-    background-color: rgb(43, 48, 49);
+    
+    background-color: rgb(51, 51, 51);
     box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
 }
