--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -19,7 +19,7 @@
    }
 }
 .component-dark {
-   background-color: black;
+   background-color: #111111;
 }
 
 /* __________________________________________________ */
